# TemplateMatching

./: README.md
ArticleFinder/: CMakeLists.txt  Overlay.cpp  Overlay.h  main.cpp
